2008-07-02  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Restore check for libxul-unstable.
	* configure: Regenerate.

2008-07-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* HACKING: Update with FSG list
	and further bug numbers.
	* Makefile.am: Remove jscheme removal
	and add in new fsg script.
	* Makefile.in: Regenerated.
	* fsg.sh: Script to sanitise OpenJDK before
	building and for the fsg tarball.

2008-07-02  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am: Write patch information from HACKING into
	the patch stamp files.
	* Makefile.in: Regenerate.

2008-07-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* acinclude.m4:
	Switch ${CACAO} for ${WITH_CACAO} in
	Shark/core/zero rules and use ${use_zero}
	instead of ${ZERO_BUILD_TRUE}.
	* aclocal.m4,
	* configure:
	Regenerated.

2008-07-02  Gary Benson  <gbenson@redhat.com>
	
	* acinclude.m4:
	Fix detection of Shark/core build.
	* aclocal.m4,
	* configure:
	Regenerated.
	
2008-07-02  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* IcedTeaPlugin.cc: New file.
	* Makefile.am: Add ENABLE_LIVECONNECT and ENABLE_PLUGIN
	conditionals.  Add IcedTeaPlugin.so target.
	* Makefile.in: Regenerate.
	* README: Document --enable-liveconnect.
	* configure.ac: Define ENABLE_LIVECONNECT and ENABLE_PLUGIN
	conditionals.  Add --enable-liveconnect option.  Add XULRunner
	pkgconfig checks.
	* configure: Regenerate.
	* .hgignore: Add IcedTeaPlugin.so.
	* patches/icedtea-liveconnect.patch: New file.
	* patches/icedtea-plugin.patch: New file.
	* patches/icedtea-webstart.patch: New file.
	* patches/icedtea-netx-plugin.patch: Remove file.
	* patches/icedtea-webservices.patch: Remove file.

2008-07-02  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-cacao.patch: openjdk/jdk/make/docs/Makefile:
	Set MAX_VM_MEMORY to 768 for 32bit builds.

2008-07-02  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-hotspot-6b06-7b24.patch: Update copyright notice in