@@ -1,3 +1,11 @@
+2008-07-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* b/Makefile.am: Fix use of abs_top_srcdir
+	for CACAO and lack of path for HACKING.
+	* b/Makefile.in: Regenerated.
+	* b/acinclude.m4: Fix CACAO path as above.
+	* b/configure: Regenerated.
+
 2008-07-02  Matthias Klose  <doko@ubuntu.com>
 
 	* configure.ac: Restore check for libxul-unstable.
